--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -6,40 +6,14 @@
 
 }
 
-// body {
-//   background-attachment: fixed;
-//   background-image: image-url("weed.jpeg");
-//   background-position: center;
-//   background-size: cover;
-//   margin: 20px;
-// }
-
-// a {
-//   color: orange;
-// }
+body {
+  background-attachment: fixed;
+  background-image: image-url("weeds.jpg");
+  background-position: center;
+  background-size: cover;
+  // margin: 20px;
+}
 
 p {
   font-size: 25px;
 }
-
-// img {
-//   width: 100px;
-//   height: 100px;
-// }
-
-// .joint {
-//
-//   color: blue;
-// }
-
-
-
-// .new-form {
-//   display: none;
-//   width: 380px;
-//   height: 420px;
-//   background-color: lightgray;
-//   color: midnightblue;
-//   // position: fixed;
-//
-// }
