--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="list container w-75 rounded  bg-info">
+    <div class="list container w-75 rounded  bg-success">
       <div  class="row">
         <div class="col-6">
 
