--- a/app/views/favorites/new.html.erb
+++ b/app/views/favorites/new.html.erb
@@ -4,11 +4,11 @@
       <h1 class="display-1">Favorites</h1>
       <p>Add Favorite</p>
       <%=form_for :favorite, url: favorites_path, method: :post do |form| %>
-      <div class="form-group">
+      <div class="form-group font-weight-bold text-uppercase">
         <%=form.label :strain%>
         <%=form.text_field :strain%>
       </div>
-      <div class="form-group">
+      <div class="form-group font-weight-bold text-uppercase">
         <%=form.label :comment%>
         <%=form.text_field :comment%>
       </div>
@@ -16,24 +16,7 @@
         <button class="btn btn-lg btn-primary"><%=form.submit "New Favorite"%></button>
       </div>
       <%end%>
-      <button class="btn btn-sm btn-outline-warning"><%= link_to 'Back', favorites_path %></button>
+      <button class="btn btn-sm btn-outline-warning"><%= link_to 'Back in Time', favorites_path %></button>
      </div>
     </div>
   </div>
-<!-- <h1>Favorites</h1>
-<p>Add Favorite</p>
-<%=form_for :favorite, url: favorites_path, method: :post do |form| %>
-<div class="field">
-  <%=form.label :strain%>
-  <%=form.text_field :strain%>
-</div>
-<div class="field">
-  <%=form.label :comment%>
-  <%=form.text_field :comment%>
-</div>
-<div class="action">
-  <%=form.submit "New Favorite"%>
-</div>
-<%end%>
-
-<%= link_to 'Back', favorites_path %> -->
