--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,24 @@
-<h1>Your Favorites</h1>
-<div class="container">
-  <div class="row bg-white">
+<h1 class="display-4 text-danger text-center">Your Favorites</h1>
+<div class="container bg-success">
+  <div class="row">
     <%@favorites.reverse.each do |el|%>
-      <div class="col-4">
-        <p><%=el.strain%></p>
-      </div>
-      <div class="col-4">
-        <p><%=el.comment%></p>
-      </div>
-
-      <section class="card bg-secondary w-50 mb-3 border-danger">
+      <section class="card bg-danger w-50 my-5 mx-5 border-white text-center">
         <div class="card-body">
-        <img src="<%=el.comment%>" class="card-img img-thumbnail img-fluid rounded-circle" alt="<%=el.comment%>"/>
-        <h2 class="card-title text-info">
-          "<%=el.strain%>"
-        </h2>
-        <!-- <button class="btn btn-lg btn-warning"><a href="${seed.url}" target="_blank">${seed.name} Info
-        </a></button> -->
+          <h2 class="card-title text-info bg-dark">
+            "<%=el.strain%>"
+          </h2>
+          <%= image_tag el.comment, class: "card-img img-thumbnail rounded-circle border-danger" %>
+          <!-- <img src="../<%=el.comment%>" class="card-img img-thumbnail rounded-circle border-danger" style="width: 256px;" alt="<%=el.comment%>"/> -->
         </div>
       </section>
 
-      <div class="container col-4 bg-warning">
-      <button class="btn btn-lg btn-secondary" type="button" name="button"><%= link_to 'Edit Fav', edit_favorite_path(el.id) %></button>
-      <button class="btn btn-lg btn-danger" type="button" name="button"><%= link_to 'Delete Fav', favorite_path(el.id), method: :delete %></button>
+      <div class="container col-4 bg-warning text-center align-items-center">
+        <div class="row">
+          <button class="btn btn-lg btn-secondary" type="button" name="button"><%= link_to 'Edit Fav', edit_favorite_path(el.id) %></button>
+          <button class="btn btn-lg btn-danger" type="button" name="button"><%= link_to 'Delete Fav', favorite_path(el.id), method: :delete %></button>
+
+        </div>
       </div>
     <%end%>
-
   </div>
 </div>
