--- a/app/views/favorites/new.html.erb
+++ b/app/views/favorites/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg-secondary">
+<div class="container bg-secondary text-center">
   <div class="row">
     <div class="new-form col-4 ">
       <h1 class="display-1">Favorites</h1>
@@ -16,7 +16,7 @@
         <button class="btn btn-lg btn-primary"><%=form.submit "New Favorite"%></button>
       </div>
       <%end%>
-      <button class="btn btn-sm btn-outline-warning"><%= link_to 'Back in Time', favorites_path %></button>
+      <button class="btn btn-sm btn-warning"><%= link_to 'Back in Time', favorites_path %></button>
      </div>
     </div>
   </div>
