disabled form and dropped table

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -21,7 +21,8 @@
           </div>
         </div>
         <div class="action">
-          <button class="btn btn-lg btn-primary"><%=form.submit "New Favorite"%></button>
+          <button class="btn btn-lg btn-primary"></button>
+          <!-- <%=form.submit "New Favorite"%> -->
         </div>
         <%end%>
         <button class="btn btn-sm btn-warning"><%= link_to 'Back', favorites_path %></button>
