--- a/app/views/favorites/new.html.erb
+++ b/app/views/favorites/new.html.erb
@@ -13,7 +13,8 @@
         <%=form.text_field :comment%>
       </div>
       <div class="action">
-        <button class="btn btn-lg btn-primary"><%=form.submit "New Favorite"%></button>
+        <button class="btn btn-lg btn-primary"></button>
+        <%=form.submit "New Favorite"%>
       </div>
       <%end%>
       <button class="btn btn-sm btn-warning"><%= link_to 'Back in Time', favorites_path %></button>
