--- a/app/views/favorites/edit.html.erb
+++ b/app/views/favorites/edit.html.erb
@@ -6,6 +6,6 @@
 <%=f.text_field :strain, value: @favorite.strain, class: "form-control"%><br>
 <%=f.text_area :comment, value: @favorite.comment, class: "form-control"%><br>
 
-<%=f.submit "Submit"%>
+<%=link_to "Submit", favorites_path%>
 </p>
 <%end%>
