--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,8 +112,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <footer class="my-5 text-danger bg-warning text-center"><p >This site is currently for legal medical marijuana card holders but soon recreational use will be nationwide.</p><br>
-            <button class="btn btn-lg bg-dark"><%= link_to 'Back to the Future', favorites_path %></button>
+          <footer class="my-5 text-danger bg-warning text-center"><p >This site is currently for legal medical marijuana card holders but soon recreational use will be nationwide.</p>
          </footer>
       </div>
       </div>
